--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
 aniso8601==1.2.0
+beautifulsoup4==4.5.3
 click==6.7
 Flask==0.12
 Flask-RESTful==0.3.5
@@ -6,6 +7,7 @@ Flask-Script==2.0.5
 itsdangerous==0.24
 Jinja2==2.9.4
 MarkupSafe==0.23
+pdfminer==20140328
 python-dateutil==2.6.0
 pytz==2016.10
 six==1.10.0
