--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,12 +2,14 @@ aniso8601==1.2.0
 beautifulsoup4==4.5.3
 click==6.7
 Flask==0.12
+Flask-PyMongo==0.4.1
 Flask-RESTful==0.3.5
 Flask-Script==2.0.5
 itsdangerous==0.24
 Jinja2==2.9.4
 MarkupSafe==0.23
 pdfminer==20140328
+pymongo==3.4.0
 python-dateutil==2.6.0
 pytz==2016.10
 six==1.10.0
