--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,15 +2,19 @@ aniso8601==1.2.0
 beautifulsoup4==4.5.3
 click==6.7
 Flask==0.12
+Flask-HTTPAuth==3.2.1
 Flask-PyMongo==0.4.1
 Flask-RESTful==0.3.5
 Flask-Script==2.0.5
+Flask-WTF==0.14.2
 itsdangerous==0.24
 Jinja2==2.9.4
 MarkupSafe==0.23
 pdfminer==20140328
+pyldap==2.4.25.1
 pymongo==3.4.0
 python-dateutil==2.6.0
 pytz==2016.10
 six==1.10.0
 Werkzeug==0.11.15
+WTForms==2.1
