--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,7 @@
 aniso8601==1.2.0
 arrow==0.10.0
 beautifulsoup4==4.5.3
-boto3==1.4.4
-botocore==1.5.2
+bs4==0.0.1
 bson==0.4.3
 click==6.7
 docutils==0.13.1
@@ -12,7 +11,6 @@ Flask-HTTPAuth==3.2.1
 Flask-PyMongo==0.4.1
 Flask-RESTful==0.3.5
 Flask-Script==2.0.5
-Flask-SQLAlchemy==2.1
 Flask-WTF==0.14.2
 futures==3.0.5
 itsdangerous==0.24
@@ -20,8 +18,7 @@ Jinja2==2.9.4
 jmespath==0.9.0
 Mako==1.0.6
 MarkupSafe==0.23
-pdfminer==20140328
-psycopg2==2.6.2
+pdfminer.six==20160614
 pyldap==2.4.25.1
 pymongo==3.4.0
 python-dateutil==2.6.0
@@ -32,7 +29,6 @@ s3transfer==0.1.10
 six==1.10.0
 slackbot==0.4.1
 slacker==0.9.40
-SQLAlchemy==1.1.5
 websocket-client==0.40.0
 Werkzeug==0.11.15
 WTForms==2.1
